--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:jwWJofL8DPI9sBV+6SUPkg2fYiCZD9IS1t9S21EBKF4=
+APP_KEY=base64:xPNqKFLcDZjDfuSJjfznJBg6SXEvmguqUSe0M8/6HlI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,14 +7,13 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=erab
+DB_DATABASE=rab
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -23,12 +21,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_KEY=
+PUSHER_SECRET=
